<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools = "http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight = "16dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    tools:context = ".SignInFragment">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text = "@string/sign_in"
        android:textAlignment="center"/>
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:rowCount="4"
        android:columnCount="2"
        android:useDefaultMargins="false">

        <!--Username-->
        <TextView
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/username"/>
        <EditText
            android:id="@+id/username_edit_text"
            android:inputType="text"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_width="match_parent"
           />

        <!--Password-->
        <TextView
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/password"/>
        <EditText
            android:id="@+id/password_edit_text"
            android:inputType="text"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_width="match_parent"

            android:password="true" />

        <!--Server Host-->
        <TextView
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/host"/>
        <EditText
            android:id="@+id/server_host_edit_text"
            android:inputType="number|text"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_width="match_parent"
            />

        <!--Server Port-->
        <TextView
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/port"/>
        <EditText
            android:id="@+id/server_port_edit_text"
            android:inputType="number|text"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_width="match_parent"
            />
    </GridLayout>

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/sign_in"/>
</LinearLayout>